Fix Final Spacing Issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,11 +70,11 @@ td {
   height: fit-content;
 } 
 .fix_top_margin {
-  margin-top: 1.5rem;
+  margin-top: 1.5rem !important;
 }
 .navBarPadding{
-  margin-top: 1rem;
-  margin-bottom: 1em;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .positionInRow {
@@ -83,7 +83,7 @@ td {
   float: left;
   text-decoration: none;
   list-style-type: none;
-  margin-bottom: 1.5rem !important;
+  margin-bottom: 0 !important;
   padding-left: 0px;
   margin-top: 0 !important;
   margin-left: 0 !important;
@@ -187,6 +187,8 @@ td {
   padding-top: 5px;
   margin-top: 10px;
 }
+
+
 
 /*formatting for the stick content*/
 .sticky {
